--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
-        android:text="Los geht's"
+        android:text="@string/txt_start_los_gehts"
         android:id="@+id/start_button"
         android:onClick="onClickStartButton"
         android:layout_gravity="center_horizontal"
