--- a/app/src/main/res/layout/chart_select_group.xml
+++ b/app/src/main/res/layout/chart_select_group.xml
@@ -11,6 +11,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="Alle Parcoure"
+        android:id="@+id/txt_alle_parcours"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/button_bg_transparent"
         android:onClick="onClickAlleParcoure" />
@@ -20,6 +21,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="Alle Schuetzen"
+        android:id="@+id/txt_alle_schuetzen"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/button_bg_transparent"
         android:onClick="onClickAlleSchuetzen" />
