--- a/app/src/main/res/layout/rundenziel_select.xml
+++ b/app/src/main/res/layout/rundenziel_select.xml
@@ -9,11 +9,13 @@
     android:background="@mipmap/ergebnis_am_ziel" >
 
     <ListView
+        android:id="@+id/android:list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" />
 
     <TextView
+        android:id="@+id/android:empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="20sp"
